Enhance rule execution and generation functionality
- Add support for test execution in `RuleSetExecutionService` with `executeTest` method.
- Refactor `execute` method to handle execution type and added support for session data population.
- Introduce `populateSessionContext` method to insert valid rule actions into the session.
- Extend `RuleSetGeneratorHelper` with methods to write method body, parameters, and imports for rule generation.
- Add utility methods in `JavaNamingUtil` for accurate Java naming conversions.
- Update Groovy template to include rule method body.
- Increment project version to `0.0.91`.